feat: addin header

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,25 +2,4 @@
 @import "styles/reset.scss";
 @import "styles/rupture.scss";
 @import "styles/vars.scss";
-
-body * {
-  font-family: "Roboto", sans-serif;
-}
-
-body,
-#___gatsby {
-  overflow-x: hidden;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-.container {
-  max-width: 1190px;
-  padding: 0 24px;
-  margin: 0 auto;
-  @include mobile() {
-    padding: 0 11px;
-  }
-}
+@import "styles/base.scss";
