--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,5 +1,8 @@
-$primary-color: #373980;
-$secondary-color: #e3672a;
+$quartz: #524948;
+$tomato: #fe654f;
+$crayola: #f7ef81;
+$mint: #b2ffd6;
+$sky-blue: #7bdff2;
 
 $grey-1: #535659;
 $grey-2: #878b90;
