--- a/src/pages/Home/components/SelectUserType/SelectUserType.scss
+++ b/src/pages/Home/components/SelectUserType/SelectUserType.scss
@@ -1,4 +1,5 @@
 .choose-container {
+  margin-bottom: 120px;
   margin-top: 100px;
   @include mobile() {
     margin-top: 30px;
@@ -43,8 +44,12 @@
         flex-direction: column;
         width: 100%;
         max-width: 250px;
-        margin-bottom: 30px;
         cursor: pointer;
+        border-radius: 10px;
+        &:not(:last-of-type) {
+          margin-bottom: 30px;
+        }
+        @include shadow;
 
         > .illustration-wrapper {
           width: 100%;
