--- a/src/pages/ListUsers/components/Filter/Filter.scss
+++ b/src/pages/ListUsers/components/Filter/Filter.scss
@@ -31,7 +31,7 @@
         color: $quartz;
         margin-bottom: 15px;
         transition: all 0.3s ease;
-        @include shadow();
+        @include shadow;
 
         &.-active {
           background-color: $quartz;
